# QuantumCanvas-Studio

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  HONEST_STATUS_REPORT.md  IMPLEMENTATION_STATUS.md  LICENSE  NEXT_PHASE_ROADMAP.md  PROJECT_STATUS_COMPLETE.md  README.md  build_examples.bat  build_examples.sh
.github/workflows/: build-and-test.yml
deployment/mobile/: deployment_guide.md
deployment/mobile/android/: AndroidManifest.xml  build.gradle
deployment/mobile/ios/: Info.plist  PrivacyInfo.xcprivacy
docs/: Arquitectura.md  Project_Manager.md  Readme_Claude.md
docs/specs/: color_pipeline.md  document_format.md  plugin_api_types.md  undo_redo.md
examples/: README.md
examples/basic_triangle/: CMakeLists.txt  README.md  main.cpp
examples/imgui_demo/: CMakeLists.txt  main.cpp
scripts/: build.sh  run.sh  setup.sh
src/core/kernel/: kernel_manager.cpp  kernel_manager.hpp
src/core/memory/: memory_manager.cpp  memory_manager.hpp
src/core/rendering/: rendering_engine.cpp  rendering_engine.hpp  shader_compiler.cpp  shader_compiler.hpp  wgpu_wrapper.hpp
src/modules/cad/: 3d_kernel.hpp  CMakeLists.txt  annotation_renderer.hpp  cad_common.cpp  cad_common.hpp  cad_types.cpp  cad_types.hpp  constraint_solver.cpp  constraint_solver.hpp  constraint_types.hpp  precision_renderer.cpp  precision_renderer.hpp
src/modules/cad/tests/: CMakeLists.txt  test_cad_types.cpp  test_constraint_solver.cpp
src/modules/io/: CMakeLists.txt  dwg_handler.hpp  file_format_manager.cpp  file_format_manager.hpp  image_codecs.hpp  vector_formats.hpp
src/modules/raster/: CMakeLists.txt  brush_engine.cpp  brush_engine.hpp  color_manager.cpp  color_manager.hpp  filter_processor.cpp  filter_processor.hpp  layer_compositor.cpp  layer_compositor.hpp
src/modules/vector/: vector_renderer.cpp  vector_renderer.hpp
src/ui/: CMakeLists.txt
src/ui/compliance/: gdpr_eu_compliance_integration.hpp  privacy_compliance_manager.cpp  privacy_compliance_manager.hpp  store_compliance_validator.hpp
src/ui/controls/: mobile_ui_manager.cpp  mobile_ui_manager.hpp  ui_manager.hpp
src/ui/events/: input_events.hpp
src/ui/window/: android_window_manager.cpp  android_window_manager.hpp  ios_window_manager.cpp  ios_window_manager.hpp  window_manager.cpp  window_manager.hpp
tests/: CMakeLists.txt  validate_system.cpp
tests/comprehensive/: comprehensive_test_suite.cpp  comprehensive_test_suite.hpp
tests/unit/: test_memory_manager.cpp  test_shader_compiler.cpp
